--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -2845,10 +2845,10 @@
    "metadata": {},
    "source": [
     "1. Do you need these for deep learning?\n",
-    "   - Lots of math T / F\n",
-    "   - Lots of data T / F\n",
-    "   - Lots of expensive computers T / F\n",
-    "   - A PhD T / F\n",
+    "   - Lots of math __False__\n",
+    "   - Lots of data __False__\n",
+    "   - Lots of expensive computers __False__\n",
+    "   - A PhD __False__\n",
     "1. Name five areas where deep learning is now the best in the world.\n",
     "1. What was the name of the first device that was based on the principle of the artificial neuron?\n",
     "1. Based on the book of the same name, what are the requirements for \"Parallel Distributed Processing\"?\n",
