--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -2850,9 +2850,14 @@
     "   - Lots of expensive computers __False__\n",
     "   - A PhD __False__\n",
     "1. Name five areas where deep learning is now the best in the world.\n",
+    "   - __Playng games, computer vision, image reconstruction, NLP, recommendation systems__\n",
     "1. What was the name of the first device that was based on the principle of the artificial neuron?\n",
+    "   - __Mark 1 Perceptron__\n",
     "1. Based on the book of the same name, what are the requirements for \"Parallel Distributed Processing\"?\n",
+    "   - __processing units, state of activation, output function, pattern of connectivity, propagation rule, activation rule, learning rule, environment__\n"
     "1. What were the two theoretical misunderstandings that held back the field of neural networks?\n",
+    "   - __Single layer perceptron wasnt learning, so people tougth that NN would not work, they forgot about adding more layers__\n",
+    "   - __The more layers, better the results__\n",
     "1. What is a GPU?\n",
     "1. Open a notebook and execute a cell containing: `1+1`. What happens?\n",
     "1. Follow through each cell of the stripped version of the notebook for this chapter. Before executing each cell, guess what will happen.\n",
