with all answers

--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -2859,33 +2859,64 @@
     "   - __Single layer perceptron wasnt learning, so people tougth that NN would not work, they forgot about adding more layers__\n",
     "   - __The more layers, better the results__\n",
     "1. What is a GPU?\n",
+    "   - __a graphical processing unit, can run lots of LA in parallel.__\n",
     "1. Open a notebook and execute a cell containing: `1+1`. What happens?\n",
+    "   - __outputs 2__\n",
     "1. Follow through each cell of the stripped version of the notebook for this chapter. Before executing each cell, guess what will happen.\n",
+    "   - __Done__\n",
     "1. Complete the Jupyter Notebook online appendix.\n",
+    "   - __Done__\n",
     "1. Why is it hard to use a traditional computer program to recognize images in a photo?\n",
+    "   - __Images hae lots of data structured in a way our brain understand, but is only matrices of numbers for PCs. It have to create these abstractions from these matrices.__\n",
     "1. What did Samuel mean by \"Weight Assignment\"?\n",
+    "   - __Change the weigths to update the model in order to be more accurate__\n",
     "1. What term do we normally use in deep learning for what Samuel called \"Weights\"?\n",
+    "   - __Parameters__\n",
     "1. Draw a picture that summarizes Arthur Samuel's view of a machine learning model\n",
+    "gv('''ordering=in",
+    "model[shape=box3d width=1 height=0.7]",
+    "inputs->model->results; weights->model; results->performance",
+    "performance->weights[constraint=false label=update]''')",
     "1. Why is it hard to understand why a deep learning model makes a particular prediction?\n",
+    "   - __Because a DL model learns from an assignment of weighs, that do not match with our perception of the problem__\n",
     "1. What is the name of the theorem that a neural network can solve any mathematical problem to any level of accuracy?\n",
+    "   - __?__\n",
     "1. What do you need in order to train a model?\n",
+    "   - __Data, labels and a model__\n",
     "1. How could a feedback loop impact the rollout of a predictive policing model?\n",
+    "   - __It could keep and enfasizes the biases on the data__\n",
     "1. Do we always have to use 224x224 pixel images with the cat recognition model?\n",
+    "   - __Nope. Only for a specific model__\n",
     "1. What is the difference between classification and regression?\n",
+    "   - __Classification attributes labels. Regression fits curves that better represent the data__\n",
     "1. What is a validation set? What is a test set? Why do we need them?\n",
+    "   - __Validation and train is a set of data that is not using for fitting the model. They are used to evaluate the accuracy of the model. Validation between the epochs, to improve the classification, and test after the training, for getting the accuracy of the model__\n",
     "1. What will fastai do if you don't provide a validation set?\n",
+    "   - __It will not validade?__\n",
     "1. Can we always use a random sample for a validation set? Why or why not?\n",
+    "   - __?__\n",
     "1. What is overfitting? Provide an example.\n",
+    "   - __Is to create a model that is very specific to the presented data and do not generalize very well for new data. Example: training with images of red dogs, a overfit model would not recognize dogs of other colors as dogs. __\n",
     "1. What is a metric? How does it differ to \"loss\"?\n",
+    "   - __A measure of a feature of the data. Loss is one type of metric__\n",
     "1. How can pretrained models help?\n",
+    "   - __The model is already trained. We avoid getting the data and training, saving lot of time and resouces.__\n",
     "1. What is the \"head\" of a model?\n",
+    "   - __The input__\n",
     "1. What kinds of features do the early layers of a CNN find? How about the later layers?\n",
+    "   - __Simple structures, like borders. Latter layers learn higher level information, like complex shapes__\n",
     "1. Are image models only useful for photos?\n",
+    "   - __No. For any type of data in the tensor form__\n",
     "1. What is an \"architecture\"?\n",
+    "   - __Is a model, and consists of a set of layers and how they connect__\n",
     "1. What is segmentation?\n",
+    "   - __Association of a label to every pixel in an image__\n",
     "1. What is `y_range` used for? When do we need it?\n",
+    "   - __?__\n",
     "1. What are \"hyperparameters\"?\n",
+    "   - __?__\n",
     "1. What's the best way to avoid failures when using AI in an organization?"
+    "   - __Follow the common stardards.__\n",
    ]
   },
   {
