--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -2880,9 +2880,9 @@
     "1. Why is it hard to understand why a deep learning model makes a particular prediction?\n",
     "   - __Because a DL model learns from an assignment of weighs, that do not match with our perception of the problem__\n",
     "1. What is the name of the theorem that a neural network can solve any mathematical problem to any level of accuracy?\n",
-    "   - __?__\n",
+    "   - __universal approximation theorem__\n",
     "1. What do you need in order to train a model?\n",
-    "   - __Data, labels and a model__\n",
+    "   - __Data, a model, labels(for most cases), a loss function, and a form to update the weighs__\n",
     "1. How could a feedback loop impact the rollout of a predictive policing model?\n",
     "   - __It could keep and enfasizes the biases on the data__\n",
     "1. Do we always have to use 224x224 pixel images with the cat recognition model?\n",
@@ -2892,17 +2892,17 @@
     "1. What is a validation set? What is a test set? Why do we need them?\n",
     "   - __Validation and train is a set of data that is not using for fitting the model. They are used to evaluate the accuracy of the model. Validation between the epochs, to improve the classification, and test after the training, for getting the accuracy of the model__\n",
     "1. What will fastai do if you don't provide a validation set?\n",
-    "   - __It will not validade?__\n",
+    "   - __It will select 20% of the data by default as validation set__\n",
     "1. Can we always use a random sample for a validation set? Why or why not?\n",
-    "   - __?__\n",
+    "   - __Not always, only when the validation data represents a kind of data that will be presented to the model afterwards__\n",
     "1. What is overfitting? Provide an example.\n",
     "   - __Is to create a model that is very specific to the presented data and do not generalize very well for new data. Example: training with images of red dogs, a overfit model would not recognize dogs of other colors as dogs. __\n",
     "1. What is a metric? How does it differ to \"loss\"?\n",
-    "   - __A measure of a feature of the data. Loss is one type of metric__\n",
+    "   - __A measure of a feature of the data. Loss is one type of metric useful for the optimization procedure.__\n",
     "1. How can pretrained models help?\n",
     "   - __The model is already trained. We avoid getting the data and training, saving lot of time and resouces.__\n",
     "1. What is the \"head\" of a model?\n",
-    "   - __The input__\n",
+    "   - __The newly added layers of a pre-trained model__\n",
     "1. What kinds of features do the early layers of a CNN find? How about the later layers?\n",
     "   - __Simple structures, like borders. Latter layers learn higher level information, like complex shapes__\n",
     "1. Are image models only useful for photos?\n",
@@ -2912,11 +2912,11 @@
     "1. What is segmentation?\n",
     "   - __Association of a label to every pixel in an image__\n",
     "1. What is `y_range` used for? When do we need it?\n",
-    "   - __?__\n",
+    "   - __For limiting the range of predicted values. We need when values outside doesnt make sense in the environment.__\n",
     "1. What are \"hyperparameters\"?\n",
-    "   - __?__\n",
+    "   - __Parameters of how the NN will learn, like number of epochs, learning rate, dropout rate, etc__\n",
     "1. What's the best way to avoid failures when using AI in an organization?"
-    "   - __Follow the common stardards.__\n",
+    "   - __Define properly the training, validation and test sets. Have a reference model that you have to beat.__\n",
    ]
   },
   {
